make driftfx work with javafx